--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Охоронна компанія TIGR</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-white text-gray-800 font-sans">
+<body class="bg-gray-900 text-gray-100 font-sans">
   <!-- Header -->
   <header class="bg-black text-white">
     <div class="container mx-auto flex items-center justify-between py-4 px-6">
@@ -27,20 +27,20 @@
   </section>
 
   <!-- Services -->
-  <section id="services" class="py-16 bg-gray-100">
+  <section id="services" class="py-16 bg-gray-800">
     <div class="container mx-auto px-6">
-      <h2 class="text-3xl font-bold text-center mb-12">Наші послуги</h2>
+      <h2 class="text-3xl font-bold text-center mb-12 text-yellow-400">Наші послуги</h2>
       <div class="grid md:grid-cols-3 gap-8">
-        <div class="bg-white p-6 rounded shadow">
-          <h3 class="text-xl font-semibold mb-2">Фізична охорона</h3>
+        <div class="bg-gray-700 p-6 rounded shadow">
+          <h3 class="text-xl font-semibold mb-2 text-yellow-300">Фізична охорона</h3>
           <p>Професійна охорона об’єктів, подій, персоналу.</p>
         </div>
-        <div class="bg-white p-6 rounded shadow">
-          <h3 class="text-xl font-semibold mb-2">Пультова охорона</h3>
+        <div class="bg-gray-700 p-6 rounded shadow">
+          <h3 class="text-xl font-semibold mb-2 text-yellow-300">Пультова охорона</h3>
           <p>Цілодобовий моніторинг із швидким реагуванням груп.</p>
         </div>
-        <div class="bg-white p-6 rounded shadow">
-          <h3 class="text-xl font-semibold mb-2">Відеоспостереження</h3>
+        <div class="bg-gray-700 p-6 rounded shadow">
+          <h3 class="text-xl font-semibold mb-2 text-yellow-300">Відеоспостереження</h3>
           <p>Монтаж та обслуговування систем безпеки.</p>
         </div>
       </div>
@@ -48,29 +48,30 @@
   </section>
 
   <!-- About -->
-  <section id="about" class="py-16">
+  <section id="about" class="py-16 bg-gray-900">
     <div class="container mx-auto px-6 text-center max-w-3xl">
-      <h2 class="text-3xl font-bold mb-6">Про компанію</h2>
-      <p class="text-lg">Компанія TIGR понад 10 років забезпечує охоронні послуги по всій Україні. Ми маємо досвідчену команду та новітнє обладнання для гарантії вашої безпеки.</p>
+      <h2 class="text-3xl font-bold mb-6 text-yellow-400">Про компанію</h2>
+      <p class="text-lg text-gray-300">Компанія TIGR понад 10 років забезпечує охоронні послуги по всій Україні. Ми маємо досвідчену команду та новітнє обладнання для гарантії вашої безпеки.</p>
     </div>
   </section>
 
   <!-- Contact Form -->
-  <section id="contact" class="bg-black text-white py-16">
+  <section id="contact" class="bg-gray-800 text-white py-16">
     <div class="container mx-auto px-6 max-w-2xl">
-      <h2 class="text-3xl font-bold text-center mb-8">Зв’яжіться з нами</h2>
+      <h2 class="text-3xl font-bold text-center mb-8 text-yellow-400">Зв’яжіться з нами</h2>
       <form class="space-y-6">
-        <input type="text" placeholder="Ваше ім’я" class="w-full px-4 py-2 rounded text-black" required />
-        <input type="email" placeholder="Ваш email" class="w-full px-4 py-2 rounded text-black" required />
-        <textarea placeholder="Повідомлення" rows="4" class="w-full px-4 py-2 rounded text-black"></textarea>
+        <input type="text" placeholder="Ваше ім’я" class="w-full px-4 py-2 rounded bg-gray-900 text-white placeholder-gray-400" required />
+        <input type="email" placeholder="Ваш email" class="w-full px-4 py-2 rounded bg-gray-900 text-white placeholder-gray-400" required />
+        <textarea placeholder="Повідомлення" rows="4" class="w-full px-4 py-2 rounded bg-gray-900 text-white placeholder-gray-400"></textarea>
         <button type="submit" class="bg-yellow-400 text-black px-6 py-2 rounded hover:bg-yellow-300">Надіслати</button>
       </form>
     </div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-900 text-gray-400 text-center py-6">
+  <footer class="bg-black text-gray-500 text-center py-6">
     <p>&copy; 2025 TIGR. Усі права захищено.</p>
   </footer>
 </body>
 </html>
+
