--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       background-color: #0b0b0b;
       color: white;
     }
+
     header {
       background-color: #000;
       padding: 10px 20px;
@@ -19,48 +20,53 @@
       justify-content: space-between;
       align-items: center;
     }
+
     nav a {
       color: white;
       margin: 0 10px;
       text-decoration: none;
       font-weight: bold;
     }
+
     .hero {
       display: flex;
       flex-direction: column;
-      align-items: center;
-      text-align: center;
+      align-items: flex-start;
+      text-align: left;
       padding: 60px 20px;
       background: #111;
       position: relative;
     }
+
     .hero-title {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
       text-transform: uppercase;
       letter-spacing: 5px;
+      margin-left: 40px;
       margin-bottom: 40px;
-      width: 100%;
-      max-width: 600px;
     }
+
     .hero-title p {
       font-size: 2.5rem;
       margin: 5px 0;
     }
+
     .diamond-btn {
       position: relative;
-      width: 130px;
-      height: 130px;
+      width: 200px;
+      height: 60px;
       background: red;
       transform: rotate(45deg);
       border-radius: 10px;
+      margin-left: 40px;
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-top: -20px;
       margin-bottom: 20px;
     }
+
     .diamond-btn span {
       transform: rotate(-45deg);
       color: white;
@@ -69,7 +75,14 @@
       display: block;
       width: 100%;
       text-align: center;
+      font-size: 0.9rem;
+      line-height: 1.2;
     }
+
+    .hero p:last-of-type {
+      margin-left: 40px;
+    }
+
     .stats {
       display: flex;
       flex-wrap: wrap;
@@ -78,13 +91,16 @@
       background: #141414;
       text-align: center;
     }
+
     .stats div {
       margin: 10px 0;
     }
+
     .services, .gallery {
       padding: 60px 20px;
       text-align: center;
     }
+
     .cards {
       display: flex;
       justify-content: center;
@@ -92,6 +108,7 @@
       gap: 20px;
       margin-top: 30px;
     }
+
     .card {
       background: #1c1c1c;
       padding: 20px;
@@ -99,9 +116,11 @@
       border-radius: 10px;
       color: white;
     }
+
     .card h3 {
       color: red;
     }
+
     .gallery img {
       width: 200px;
       border-radius: 10px;
@@ -109,14 +128,21 @@
     }
 
     @media (max-width: 768px) {
-      .hero-title p {
-        font-size: 2rem;
-      }
       .hero-title {
         align-items: center;
+        margin-left: 0;
       }
-      .stats {
-        flex-direction: column;
+
+      .diamond-btn {
+        margin-left: 0;
+        width: 140px;
+        height: 60px;
+      }
+
+      .hero p:last-of-type {
+        margin-left: 0;
+        text-align: center;
+        width: 100%;
       }
     }
   </style>
