--- a/index.html
+++ b/index.html
@@ -42,12 +42,15 @@
     }
 
     .hero-title {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
+      position: relative;
+      left: 25%;
+      transform: translateX(-50%);
       text-transform: uppercase;
       letter-spacing: 5px;
       margin-bottom: 30px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
     }
 
     .hero-title p {
@@ -129,6 +132,8 @@
       }
 
       .hero-title {
+        position: static;
+        transform: none;
         align-items: center;
       }
 
