--- a/index.html
+++ b/index.html
@@ -29,28 +29,19 @@
     }
 
     .hero {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      text-align: left;
-      padding: 60px 40px;
       background: #111;
+      padding: 60px 40px;
     }
 
-    .hero img {
-      max-width: 300px;
-    }
-
-    .hero-title {
+    .hero-content {
       position: relative;
       left: 25%;
       transform: translateX(-50%);
-      text-transform: uppercase;
-      letter-spacing: 5px;
-      margin-bottom: 30px;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+      text-transform: uppercase;
+      letter-spacing: 5px;
     }
 
     .hero-title p {
@@ -59,6 +50,7 @@
     }
 
     .hex-btn {
+      margin-top: 20px;
       display: inline-block;
       background: #ff1e1e;
       color: white;
@@ -69,16 +61,21 @@
       text-transform: uppercase;
       clip-path: polygon(15% 0%, 85% 0%, 100% 50%, 85% 100%, 15% 100%, 0% 50%);
       transition: background 0.3s;
-      margin-bottom: 15px;
     }
 
     .hex-btn:hover {
       background: #cc0000;
     }
 
-    .hero p strong {
+    .hero-content p {
       margin-top: 10px;
-      display: inline-block;
+      font-weight: normal;
+      text-transform: none;
+      color: white;
+    }
+
+    .hero-content p strong {
+      font-weight: bold;
     }
 
     .stats {
@@ -126,15 +123,11 @@
     }
 
     @media (max-width: 768px) {
-      .hero {
-        align-items: center;
-        text-align: center;
-      }
-
-      .hero-title {
+      .hero-content {
         position: static;
         transform: none;
         align-items: center;
+        text-align: center;
       }
 
       .hero-title p {
@@ -161,13 +154,15 @@
   </header>
 
   <section class="hero">
-    <div class="hero-title">
-      <p>ПІДРОЗДІЛ</p>
-      <p>ШВИДКОГО</p>
-      <p>РЕАГУВАННЯ</p>
+    <div class="hero-content">
+      <div class="hero-title">
+        <p>ПІДРОЗДІЛ</p>
+        <p>ШВИДКОГО</p>
+        <p>РЕАГУВАННЯ</p>
+      </div>
+      <a class="hex-btn" href="#form">ЗАЛИШИТИ ЗАЯВКУ</a>
+      <p>Або зателефонуйте <strong>0800-30-47-74</strong></p>
     </div>
-    <a class="hex-btn" href="#form">ЗАЛИШИТИ ЗАЯВКУ</a>
-    <p>Або зателефонуйте <strong>0800-30-47-74</strong></p>
   </section>
 
   <section class="stats">
