--- a/index.html
+++ b/index.html
@@ -16,17 +16,22 @@
 
     header {
       background-color: #000;
-      padding: 10px 20px;
+      padding: 15px 20px;
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
     }
 
     nav a {
       color: white;
-      margin: 0 10px;
+      margin: 0 15px;
       text-decoration: none;
-      font-weight: bold;
+      font-weight: normal;
+      font-size: 1rem;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
     }
 
     .hero {
@@ -52,7 +57,6 @@
       display: inline-block;
       background: #ff1e1e;
       color: white;
-      font-weight: bold;
       font-size: 1rem;
       padding: 12px 50px;
       text-decoration: none;
@@ -67,9 +71,7 @@
 
     .hero-content p:last-child {
       margin-top: 10px;
-      font-weight: normal;
       text-transform: none;
-      color: white;
     }
 
     .hero-content p strong {
@@ -136,12 +138,20 @@
       .stats {
         flex-direction: column;
       }
+
+      nav {
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+
+      nav a {
+        margin: 5px 10px;
+      }
     }
   </style>
 </head>
 <body>
   <header>
-    <div><img src="logo.png" alt="ТИГР логотип" height="40"></div>
     <nav>
       <a href="#about">Про нас</a>
       <a href="#services">Послуги</a>
