--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <p>Або зателефонуйте <strong>0800-30-47-74</strong></p>
     </div>
     <div class="hero-image">
-      <img src="your-image.jpg" alt="Охоронна компанія ТИГР">
+      <img src="Copilot_20250803_164540.png" alt="Охоронна компанія ТИГР">
     </div>
   </section>
 
