--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Охоронна компанія ТИГР</title>
+  <title>Підрозділ швидкого реагування ТИГР</title>
   <link rel="icon" href="Tiger logo.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
   
@@ -70,7 +70,6 @@
       text-transform: uppercase;
       clip-path: polygon(15% 0%, 85% 0%, 100% 50%, 85% 100%, 15% 100%, 0% 50%);
       transition: background 0.3s;
-      cursor: pointer;
     }
 
     .hex-btn:hover {
@@ -81,6 +80,15 @@
       margin-top: 10px;
       text-transform: none;
       cursor: pointer;
+      user-select: none;
+      position: relative;
+      padding: 5px 10px;
+      border-radius: 5px;
+      transition: border 0.3s ease;
+    }
+
+    .hero-content p:last-child.copied {
+      border: 2px solid black;
     }
 
     .hero-content p strong {
@@ -98,7 +106,23 @@
       height: auto;
       border-radius: 10px;
       object-fit: contain;
-      box-shadow: 0 0 20px 8px rgba(255, 0, 0, 0.7);
+      position: relative;
+      z-index: 1;
+    }
+
+    /* Підсвічування від центру */
+    .hero-image::before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 120%;
+      height: 120%;
+      transform: translate(-50%, -50%);
+      border-radius: 10px;
+      pointer-events: none;
+      background: radial-gradient(circle, rgba(255,0,0,0.6) 0%, transparent 70%);
+      z-index: 0;
     }
 
     .stats {
@@ -193,7 +217,7 @@
         <p>РЕАГУВАННЯ</p>
       </div>
       <a class="hex-btn" href="#form">ЗАЛИШИТИ ЗАЯВКУ</a>
-      <p id="phone-number">Або зателефонуйте <strong>0800-30-47-74</strong></p>
+      <p id="phone">Або зателефонуйте <strong>0800-30-47-74</strong></p>
     </div>
     <div class="hero-image">
       <img src="Copilot_20250803_164540.png" alt="Охоронна компанія ТИГР">
@@ -236,11 +260,14 @@
   </section>
 
   <script>
-    // Копіювання номера телефону при кліку
-    document.getElementById('phone-number').addEventListener('click', function() {
-      const phone = this.querySelector('strong').textContent.trim();
-      navigator.clipboard.writeText(phone).then(() => {
-        alert('Номер телефону скопійовано: ' + phone);
+    const phoneParagraph = document.getElementById('phone');
+    phoneParagraph.addEventListener('click', () => {
+      const phoneNumber = phoneParagraph.querySelector('strong').innerText;
+      navigator.clipboard.writeText(phoneNumber).then(() => {
+        phoneParagraph.classList.add('copied');
+        setTimeout(() => {
+          phoneParagraph.classList.remove('copied');
+        }, 2000);
       }).catch(() => {
         alert('Не вдалося скопіювати номер телефону.');
       });
