--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Підрозділ швидкого реагування ТИГР</title>
+  <title>Охоронна компанія ТИГР</title>
   <link rel="icon" href="Tiger logo.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
-  
+
   <style>
     body {
       margin: 0;
@@ -125,17 +125,34 @@
       z-index: 0;
     }
 
+    /* Оновлений стиль для прокрутки */
     .stats {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
       padding: 40px 20px;
       background: #141414;
       text-align: center;
+
+      overflow-x: hidden; /* спочатку приховуємо прокрутку */
+      white-space: nowrap;
+      cursor: pointer;
+      transition: overflow-x 0.3s ease;
+      display: flex;
+      justify-content: flex-start;
+      gap: 50px;
     }
 
+    /* Кожен блок в один рядок */
     .stats div {
-      margin: 10px 0;
+      display: inline-block;
+      margin: 0; /* прибираємо вертикальні відступи, бо flex-розкладка */
+      flex: 0 0 auto;
+      text-align: center;
+      min-width: 150px;
+    }
+
+    /* При наведенні - показуємо прокрутку */
+    .stats:hover {
+      overflow-x: auto;
+      scroll-behavior: smooth;
     }
 
     .services, .gallery {
