--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Охоронна компанія ТИГР</title>
+  <title>Підрозділ швидкого реагування ТИГР</title>
   <link rel="icon" href="Tiger logo.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
-
+  
   <style>
     body {
       margin: 0;
@@ -14,7 +14,7 @@
       background-color: #0b0b0b;
       color: white;
       letter-spacing: 3px;
-      padding-top: 70px; /* Відступ зверху, щоб контент не ховався під фіксованою шапкою */
+      padding-top: 70px; /* щоб контент не ховався під фіксованою шапкою */
     }
 
     header {
@@ -22,18 +22,26 @@
       top: 0;
       left: 0;
       width: 100%;
-      background-color: rgba(0, 0, 0, 0.5); /* Чорний фон 50% прозорий */
+      background-color: rgba(0, 0, 0, 0.5);
       padding: 15px 20px;
       display: flex;
-      justify-content: space-between; /* Контент розташований зліва і справа */
       align-items: center;
       z-index: 1000;
-      backdrop-filter: blur(8px); /* Легке розмиття фону для кращого вигляду */
+      backdrop-filter: blur(8px);
       box-sizing: border-box;
+    }
+
+    .logo {
+      height: 40px;
+      user-select: none;
+      margin-right: 20px;
+      flex-shrink: 0;
     }
 
     nav {
       display: flex;
+      justify-content: center;
+      flex: 1;
       gap: 15px;
     }
 
@@ -43,18 +51,13 @@
       font-weight: normal;
       font-size: 1rem;
       white-space: nowrap;
+      transition: color 0.3s;
     }
 
     nav a:hover {
       text-decoration: underline;
+      color: #ff1e1e;
     }
-
-    .logo {
-      height: 40px; /* Висота логотипу */
-      user-select: none;
-    }
-
-    /* Інші стилі без змін */
 
     .hero {
       background: #111;
@@ -90,6 +93,7 @@
       text-transform: uppercase;
       clip-path: polygon(15% 0%, 85% 0%, 100% 50%, 85% 100%, 15% 100%, 0% 50%);
       transition: background 0.3s;
+      user-select: none;
     }
 
     .hex-btn:hover {
@@ -99,25 +103,10 @@
     .hero-content p:last-child {
       margin-top: 10px;
       text-transform: none;
-      cursor: pointer;
-      user-select: none;
-      position: relative;
-      padding: 5px 10px;
-      border-radius: 5px;
-      transition: border 0.3s ease;
-    }
-
-    .hero-content p:last-child.copied {
-      border: 2px solid black;
     }
 
     .hero-content p strong {
       font-weight: bold;
-    }
-
-    .hero-image {
-      position: relative;
-      display: inline-block;
     }
 
     .hero-image img {
@@ -126,53 +115,40 @@
       height: auto;
       border-radius: 10px;
       object-fit: contain;
-      position: relative;
-      z-index: 1;
-    }
-
-    .hero-image::before {
-      content: "";
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 120%;
-      height: 120%;
-      transform: translate(-50%, -50%);
-      border-radius: 10px;
-      pointer-events: none;
-      background: radial-gradient(circle, rgba(255,0,0,0.6) 0%, transparent 70%);
-      z-index: 0;
+      box-shadow: 0 0 30px 8px rgba(255, 30, 30, 0.6);
     }
 
     .stats {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
       padding: 40px 20px;
       background: #141414;
       text-align: center;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 50px;
     }
 
     .stats div {
-      min-width: 150px;
-      text-align: center;
-      user-select: none;
-      padding: 20px;
-      border-radius: 8px;
-      background: #1c1c1c;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-      cursor: pointer;
-      will-change: transform;
+      margin: 10px 0;
+      cursor: default;
+      perspective: 400px;
+      transition: transform 0.3s ease;
     }
 
     .stats div:hover {
-      box-shadow: 0 10px 20px rgba(255, 0, 0, 0.5);
-      z-index: 10;
+      transform: scale(1.1) rotateX(15deg) rotateY(15deg);
+      transition: transform 0.2s ease;
     }
 
-    .stats div h2 {
-      margin: 0 0 10px 0;
+    .stats h2 {
+      margin: 0;
+      font-size: 2rem;
+      user-select: none;
+    }
+
+    .stats p {
+      margin: 5px 0 0;
+      font-size: 1rem;
+      user-select: none;
     }
 
     .services, .gallery {
@@ -194,10 +170,17 @@
       width: 300px;
       border-radius: 10px;
       color: white;
+      user-select: none;
+      transition: transform 0.3s ease;
+    }
+
+    .card:hover {
+      transform: scale(1.05);
     }
 
     .card h3 {
       color: red;
+      margin-top: 0;
     }
 
     .gallery img {
@@ -231,19 +214,12 @@
       nav a {
         margin: 5px 10px;
       }
-
-      header {
-        padding: 10px 15px;
-      }
-
-      .logo {
-        height: 30px;
-      }
     }
   </style>
 </head>
 <body>
   <header>
+    <img src="Tiger logo.png" alt="Логотип ТИГР" class="logo" />
     <nav>
       <a href="#about">Про нас</a>
       <a href="#services">Послуги</a>
@@ -252,7 +228,6 @@
       <a href="#contact">Контакти</a>
       <a href="#sales">Акції</a>
     </nav>
-    <img src="Tiger logo.png" alt="Логотип ТИГР" class="logo" />
   </header>
 
   <section class="hero">
@@ -263,18 +238,30 @@
         <p>РЕАГУВАННЯ</p>
       </div>
       <a class="hex-btn" href="#form">ЗАЛИШИТИ ЗАЯВКУ</a>
-      <p id="phone">Або зателефонуйте <strong>0800-30-47-74</strong></p>
+      <p>Або зателефонуйте <strong>0800-30-47-74</strong></p>
     </div>
     <div class="hero-image">
-      <img src="Copilot_20250803_164540.png" alt="Охоронна компанія ТИГР">
+      <img src="Copilot_20250803_164540.png" alt="Охоронна компанія ТИГР" />
     </div>
   </section>
 
-  <section class="stats" id="stats">
-    <div><h2>13 РОКІВ</h2><p>Досвід роботи</p></div>
-    <div><h2>15000+</h2><p>Клієнтів</p></div>
-    <div><h2>5000+</h2><p>Об'єктів під охороною</p></div>
-    <div><h2>24/7</h2><p>Моніторинг та реагування</p></div>
+  <section class="stats">
+    <div>
+      <h2>13 РОКІВ</h2>
+      <p>Досвід роботи</p>
+    </div>
+    <div>
+      <h2>15000+</h2>
+      <p>Клієнтів</p>
+    </div>
+    <div>
+      <h2>5000+</h2>
+      <p>Об'єктів під охороною</p>
+    </div>
+    <div>
+      <h2>24/7</h2>
+      <p>Моніторинг та реагування</p>
+    </div>
   </section>
 
   <section class="services" id="services">
@@ -298,47 +285,11 @@
   <section class="gallery" id="gallery">
     <h2>ГАЛЕРЕЯ</h2>
     <div>
-      <img src="guard1.jpg" alt="Охоронець">
-      <img src="guard2.jpg" alt="ТИГР екіпірування">
-      <img src="car1.jpg" alt="Машина TIGR">
-      <img src="badge.jpg" alt="Логотип TIGR">
+      <img src="guard1.jpg" alt="Охоронець" />
+      <img src="guard2.jpg" alt="ТИГР екіпірування" />
+      <img src="car1.jpg" alt="Машина TIGR" />
+      <img src="badge.jpg" alt="Логотип TIGR" />
     </div>
   </section>
-
-  <script>
-    // Копіювання номера телефону по кліку
-    const phone = document.getElementById('phone');
-    phone.addEventListener('click', () => {
-      const text = phone.querySelector('strong').innerText;
-      navigator.clipboard.writeText(text).then(() => {
-        phone.classList.add('copied');
-        setTimeout(() => phone.classList.remove('copied'), 1500);
-      });
-    });
-
-    // Нахил для блоків з .stats
-    const statsBlocks = document.querySelectorAll('.stats div');
-
-    statsBlocks.forEach(block => {
-      block.addEventListener('mousemove', e => {
-        const rect = block.getBoundingClientRect();
-        const x = e.clientX - rect.left;
-        const y = e.clientY - rect.top;
-        const rotateX = ((y / rect.height) - 0.5) * 15; // нахил по X
-        const rotateY = ((x / rect.width) - 0.5) * 15;  // нахил по Y
-        block.style.transform = `perspective(400px) scale(1.1) rotateX(${ -rotateX }deg) rotateY(${ rotateY }deg)`;
-        block.style.transition = 'transform 0.1s ease-out';
-        block.style.zIndex = '10';
-        block.style.boxShadow = '0 10px 20px rgba(255, 0, 0, 0.6)';
-      });
-
-      block.addEventListener('mouseleave', () => {
-        block.style.transform = 'none';
-        block.style.transition = 'transform 0.3s ease-in';
-        block.style.zIndex = '1';
-        block.style.boxShadow = 'none';
-      });
-    });
-  </script>
 </body>
 </html>
