--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Підрозділ швидкого реагування ТИГР</title>
+  <title>Охоронна компанія ТИГР</title>
   <link rel="icon" href="Tiger logo.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
   
@@ -14,7 +14,7 @@
       background-color: #0b0b0b;
       color: white;
       letter-spacing: 3px;
-      padding-top: 70px; /* щоб контент не ховався під фіксованою шапкою */
+      padding-top: 70px;
     }
 
     header {
@@ -23,19 +23,19 @@
       left: 0;
       width: 100%;
       background-color: rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(8px);
       padding: 15px 20px;
       display: flex;
       align-items: center;
       z-index: 1000;
-      backdrop-filter: blur(8px);
       box-sizing: border-box;
     }
 
     .logo {
       height: 40px;
-      user-select: none;
-      margin-right: 20px;
+      margin-right: 10px;
       flex-shrink: 0;
+      user-select: none;
     }
 
     nav {
@@ -47,16 +47,15 @@
 
     nav a {
       color: white;
+      margin: 0 10px;
       text-decoration: none;
       font-weight: normal;
       font-size: 1rem;
       white-space: nowrap;
-      transition: color 0.3s;
     }
 
     nav a:hover {
       text-decoration: underline;
-      color: #ff1e1e;
     }
 
     .hero {
@@ -93,7 +92,6 @@
       text-transform: uppercase;
       clip-path: polygon(15% 0%, 85% 0%, 100% 50%, 85% 100%, 15% 100%, 0% 50%);
       transition: background 0.3s;
-      user-select: none;
     }
 
     .hex-btn:hover {
@@ -103,6 +101,7 @@
     .hero-content p:last-child {
       margin-top: 10px;
       text-transform: none;
+      cursor: pointer;
     }
 
     .hero-content p strong {
@@ -115,7 +114,7 @@
       height: auto;
       border-radius: 10px;
       object-fit: contain;
-      box-shadow: 0 0 30px 8px rgba(255, 30, 30, 0.6);
+      box-shadow: 0 0 50px rgba(255, 0, 0, 0.5);
     }
 
     .stats {
@@ -129,26 +128,9 @@
 
     .stats div {
       margin: 10px 0;
-      cursor: default;
-      perspective: 400px;
       transition: transform 0.3s ease;
-    }
-
-    .stats div:hover {
-      transform: scale(1.1) rotateX(15deg) rotateY(15deg);
-      transition: transform 0.2s ease;
-    }
-
-    .stats h2 {
-      margin: 0;
-      font-size: 2rem;
-      user-select: none;
-    }
-
-    .stats p {
-      margin: 5px 0 0;
-      font-size: 1rem;
-      user-select: none;
+      perspective: 500px;
+      cursor: pointer;
     }
 
     .services, .gallery {
@@ -170,17 +152,10 @@
       width: 300px;
       border-radius: 10px;
       color: white;
-      user-select: none;
-      transition: transform 0.3s ease;
-    }
-
-    .card:hover {
-      transform: scale(1.05);
     }
 
     .card h3 {
       color: red;
-      margin-top: 0;
     }
 
     .gallery img {
@@ -215,6 +190,15 @@
         margin: 5px 10px;
       }
     }
+
+    /* Для копіювання */
+    .copied {
+      border: 2px solid black;
+      padding: 5px 10px;
+      display: inline-block;
+      border-radius: 5px;
+      background-color: rgba(255, 255, 255, 0.1);
+    }
   </style>
 </head>
 <body>
@@ -238,30 +222,18 @@
         <p>РЕАГУВАННЯ</p>
       </div>
       <a class="hex-btn" href="#form">ЗАЛИШИТИ ЗАЯВКУ</a>
-      <p>Або зателефонуйте <strong>0800-30-47-74</strong></p>
+      <p id="phone">Або зателефонуйте <strong>0800-30-47-74</strong></p>
     </div>
     <div class="hero-image">
-      <img src="Copilot_20250803_164540.png" alt="Охоронна компанія ТИГР" />
+      <img src="Copilot_20250803_164540.png" alt="Охоронна компанія ТИГР">
     </div>
   </section>
 
   <section class="stats">
-    <div>
-      <h2>13 РОКІВ</h2>
-      <p>Досвід роботи</p>
-    </div>
-    <div>
-      <h2>15000+</h2>
-      <p>Клієнтів</p>
-    </div>
-    <div>
-      <h2>5000+</h2>
-      <p>Об'єктів під охороною</p>
-    </div>
-    <div>
-      <h2>24/7</h2>
-      <p>Моніторинг та реагування</p>
-    </div>
+    <div><h2>13 РОКІВ</h2><p>Досвід роботи</p></div>
+    <div><h2>15000+</h2><p>Клієнтів</p></div>
+    <div><h2>5000+</h2><p>Об'єктів під охороною</p></div>
+    <div><h2>24/7</h2><p>Моніторинг та реагування</p></div>
   </section>
 
   <section class="services" id="services">
@@ -285,11 +257,23 @@
   <section class="gallery" id="gallery">
     <h2>ГАЛЕРЕЯ</h2>
     <div>
-      <img src="guard1.jpg" alt="Охоронець" />
-      <img src="guard2.jpg" alt="ТИГР екіпірування" />
-      <img src="car1.jpg" alt="Машина TIGR" />
-      <img src="badge.jpg" alt="Логотип TIGR" />
+      <img src="guard1.jpg" alt="Охоронець">
+      <img src="guard2.jpg" alt="ТИГР екіпірування">
+      <img src="car1.jpg" alt="Машина TIGR">
+      <img src="badge.jpg" alt="Логотип TIGR">
     </div>
   </section>
+
+  <script>
+    // Копіювання номера телефону
+    const phone = document.getElementById('phone');
+    phone.addEventListener('click', () => {
+      const text = phone.querySelector('strong').innerText;
+      navigator.clipboard.writeText(text).then(() => {
+        phone.classList.add('copied');
+        setTimeout(() => phone.classList.remove('copied'), 1500);
+      });
+    });
+  </script>
 </body>
 </html>
